--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,14 +102,14 @@ h4  {
 }
 
 .btn-signup {
-    background-color: #23BBBB;
+    background-color: #1a1a1a;
     color: #fff;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
     background-color: #fff;
-    color: #23BBBB;
+    color: #1a1a1a;
 }
 
 .link {
@@ -175,10 +175,6 @@ h4  {
 .row {
     margin-left: 10px;
     
-}
-
-.btn-del {
-    background-color: #1a1a1a;
 }
 
 .footer {
